--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -10,6 +10,7 @@ androidx-core-ktx = "1.13.1"
 androidx-espresso-core = "3.5.1"
 androidx-material = "1.12.0"
 androidx-test-junit = "1.1.5"
+cmpPreference = "1.0.0"
 compose-plugin = "1.6.10"
 junit = "4.13.2"
 kotlin = "1.9.20"
@@ -19,9 +20,11 @@ ktor = "2.3.9"
 koinComposeMultiplatform = "1.2.0-alpha3"
 coroutines = "1.8.0"
 lifecycleViewmodelCompose = "2.8.0"
+multiplatformSettings = "0.8.1"
 navigationCompose = "2.7.0-alpha07"
 
 [libraries]
+cmp-preference = { module = "network.chaintech:cmp-preference", version.ref = "cmpPreference" }
 kotlin-test = { module = "org.jetbrains.kotlin:kotlin-test", version.ref = "kotlin" }
 kotlin-test-junit = { module = "org.jetbrains.kotlin:kotlin-test-junit", version.ref = "kotlin" }
 junit = { group = "junit", name = "junit", version.ref = "junit" }
@@ -50,6 +53,7 @@ koin-compose = { module = "io.insert-koin:koin-compose", version.ref = "koinComp
 
 kotlin-coroutines = {module = "org.jetbrains.kotlinx:kotlinx-coroutines-core", version.ref="coroutines"}
 lifecycle-viewmodel-compose = { module = "org.jetbrains.androidx.lifecycle:lifecycle-viewmodel-compose", version.ref = "lifecycleViewmodelCompose" }
+multiplatform-settings = { module = "com.russhwolf:multiplatform-settings", version.ref = "multiplatformSettings" }
 navigation-compose = { module = "org.jetbrains.androidx.navigation:navigation-compose", version.ref = "navigationCompose" }
 
 [plugins]
